"""
BUILD.bazel for @tummycrypt/tinyland-threat-detection.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-threat-detection && pnpm build
  Monorepo:   bazel build //packages/tinyland-threat-detection/...
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//vitest:package_json.bzl", vitest_bin = "bin")

npm_link_all_packages(name = "node_modules")


ts_project(
    name = "tinyland_threat_detection",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        ":node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_threat_detection",
    ],
    package = "@tummycrypt/tinyland-threat-detection",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tinyland_threat_detection_test_lib",
    srcs = glob(["tests/**/*.test.ts"]),
    declaration = False,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":tinyland_threat_detection",
        ":node_modules",
        ":node_modules/vitest",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    data = [
        ":tinyland_threat_detection",
        ":tinyland_threat_detection_test_lib",
        ":node_modules",
        ":node_modules/vitest",
        "vitest.config.ts",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
